# geant4work

B1try/: CMakeLists.txt  vis.mac
B1try/build-current/: CMakeCache.txt  Makefile  cmake_install.cmake  exampleB1  run1.mac  run2.mac
B1try/build-current/models/: Al.STL
B1try/include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh
B1try/src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc
B3/B3a/src/: DetectorConstruction.cc
LMO2x2/: CMakeLists.txt
LMO2x2/include/: LMO2x2ActionInitialization.hh  LMO2x2DetectorConstruction.hh  LMO2x2PhysicsList.hh  LMO2x2PrimaryGenerator.hh  LMO2x2RunAction.hh
LMO2x2/src/: LMO2x2ActionInitialization.cc  LMO2x2DetectorConstruction.cc  LMO2x2PhysicList.cc  LMO2x2PrimaryGenerator.cc  LMO2x2RunAction.cc
geant4-11-tutorial-main/: CMakeLists.txt  sim.cc
geant4-11-tutorial-main/include/: PMActionInitialization.hh  PMDetectorConstruction.hh  PMPhysicsList.hh  PMPrimaryGenerator.hh  PMSensitiveDetector.hh
geant4-11-tutorial-main/src/: PMActionInitialization.cc  PMDetectorConstruction.cc  PMPhysicsList.cc  PMPrimaryGenerator.cc  PMRunAction.cc  PMSensitiveDetector.cc
lab101structure/models/: 100mK.STL  all_structure.STEP  all_structure.gdml
lab101structure/scripts/: step_to_gdml.py
lab101structure/src/: DetectorConstruction.cc
